# zakup_serv

./: .gitignore  TODO_list.txt  pyproject.toml
src/zakup_serv/: experiment.ipynb  main.py  main_.ipynb  settings.py
src/zakup_serv/domain/actual_contracts/: date_interval.py  price_interval.py  regions.py  settings.py  urls.py
src/zakup_serv/domain/actual_contracts/query_parameters/: dates.py  pages.py  prices.py  regions.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/: config.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/contracts/: urls.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/contracts/domain/: contracts.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/contracts/query_parameters/: base.py  dates.py  pages.py  prices.py  reestr_number.py  regions.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/tenders/: tender_config.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/tenders/domain/: attachment_file.py  new_tenders.py  tender.py  tender_types.py
src/zakup_serv/domain/marketplaces/zakupki_gov_ru/tenders/query_parameters/: dates.py  (+5 more)
src/zakup_serv/infrastructure/: CustomExceptions.py  adapters.py  common_helpers.py  logging_config.py  urls.py
src/zakup_serv/infrastructure/result_processors/: base.py  concurrent.py  decorators.py  extract_contract_nums.py  extract_tender_attachments.py  extract_tender_nums.py  response_length.py  save_on_disk.py
src/zakup_serv/infrastructure/savers/: save_on_disk.py
src/zakup_serv/transport/: aiohttp_dl.py  base.py  prepare_request.py
tests/transport/: test_aiohttp_downloader.py
(+2 files in other folders)
