[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zakup-serv"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "black[jupyter]>=26.3.1",
    "curlparser>=0.1.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "lxml>=6.0.2",
    "types-aiofiles>=25.1.0.20260409",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-json-logger>=4.1.0",
]
[tool.pytest.ini_options]
    testpaths = ["tests"]
    pythonpath = ["src"]


[tool.setuptools]
    package-dir = {"" = "src"}

[tool.setuptools.packages]
    find = {where = ["src"]}

